--- a/web/css/style.css
+++ b/web/css/style.css
@@ -25,9 +25,17 @@ body {
     font-size: 20px;
     color: #ffffff;
 }
-  
+
 #login {
-    background-color: #f1f2ec;
+    background: #fafafa;
+    height: 150px;
+    margin: 1rem;
+    padding: 1rem;
+    border: 2px solid #ccc; 
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 #footer {
