--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,4 +1,4 @@
-body,html {
+.body,html {
     font-family: Garamond, serif;
     height: 100%;
     margin: 0;
@@ -59,4 +59,9 @@ body,html {
 .langu {
     background: #ffffff;
     color: #191919;
+}
+
+.container-fluid {
+    justify-content: center;
+    align-items: center;
 }
